# RSC2025-SoloEz

./: README.md
src/custom_interface/: CMakeLists.txt  package.xml
src/custom_interface/action/: RescueMission.action
src/custom_interface/msg/: DroneStatus.msg  MapState.msg
src/custom_interface/srv/: AddObstacle.srv  AddVictim.srv
src/drone_controller/: CMakeLists.txt  package.xml
src/map_manager/: CMakeLists.txt  package.xml
src/map_manager/include/: map_state.hpp
src/map_manager/src/: map_manager_node.cpp  map_state.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: path_planner_node.cpp
